--- a/index.htm
+++ b/index.htm
@@ -9,6 +9,29 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <section class="content">
+        <h1>Esercizio per Casa</h1>
+
+        <div class="container">
+            <div class="box col-1">1 col</div>
+            <div class="box col-1">1 col</div>
+            <div class="box col-1">1 col</div>
+            <div class="box col-1">1 col</div>
+            <div class="box col-1">1 col</div>
+            <div class="box col-1">1 col</div>
+            <div class="box col-1">1 col</div>
+            <div class="box col-1">1 col</div>
+            <div class="box col-1">1 col</div>
+            <div class="box col-1">1 col</div>
+            <div class="box col-1">1 col</div>
+            <div class="box col-1">1 col</div>
+        </div>
+
+        <div class="container">
+            <div class="box col-2">col</div>
+            <div class="box col-5">col</div>
+            <div class="box col-5">col</div>
+        </div>
+    </section>
 </body>
 </html>
