--- a/index.htm
+++ b/index.htm
@@ -32,6 +32,33 @@
             <div class="box col-5">col</div>
             <div class="box col-5">col</div>
         </div>
+
+        <div class="container">
+            <div class="box col-12">12 col</div>
+        </div>
+
+        <div class="container">
+            <div class="box col-8">8 col</div>
+            <div class="box col-2">2 col</div>
+            <div class="box col-2">2 col</div>
+        </div>
+
+        <div class="container">
+            <div class="box col-1">1 col</div>
+            <div class="box col-2">2 col</div>
+            <div class="box col-2">2 col</div>
+            <div class="box col-6">6 col</div>
+            <div class="box col-1">1 col</div>
+        </div>
+
+        <div class="container">
+            <div class="container-2 box col-6">
+                <div class="box col-2">Nested 2 col</div>
+                <div class="box col-2">Nested 2 col</div>
+                <div class="box col-8">Nested 8 col</div>
+            </div>
+            <div class="box col-6"></div>
+        </div>
     </section>
 </body>
 </html>
