End column and bars

--- a/index.htm
+++ b/index.htm
@@ -9,6 +9,9 @@
     <title>Document</title>
 </head>
 <body>
+
+    <!--COLUMN-->
+
     <section class="content">
         <h1>Esercizio per Casa</h1>
 
@@ -57,8 +60,55 @@
                 <div class="box col-2">Nested 2 col</div>
                 <div class="box col-8">Nested 8 col</div>
             </div>
-            <div class="box col-6"></div>
+            <div class="container-2 box col-6">
+                <div class="box col-6">Nested 6 col</div>
+                <div class="box col-6">Nested 6 col</div>
+            </div>
         </div>
+    </section>
+
+    <!--BARS-->    
+
+    <section class="content">
+        <div class="container">
+            <div class="box tall col-12"></div>
+        </div>
+
+        <div class="container">
+            <div class="box tall col-1"></div>
+            <div class="box tall col-11"></div>
+        </div>
+
+        <div class="container">
+            <div class="box tall col-2"></div>
+            <div class="box tall col-10"></div>
+        </div>
+
+        <div class="container">
+            <div class="box tall col-3"></div>
+            <div class="box tall col-9"></div>
+        </div>
+
+        <div class="container">
+            <div class="box tall col-4"></div>
+            <div class="box tall col-8"></div>
+        </div>
+
+        <div class="container">
+            <div class="box tall col-5"></div>
+            <div class="box tall col-7"></div>
+        </div>
+
+        <div class="container">
+            <div class="box tall col-6"></div>
+            <div class="box tall col-6"></div>
+        </div>
+    </section>
+
+    <!--OFFSET-->
+
+    <section class="content">
+
     </section>
 </body>
 </html>
