--- a/index.htm
+++ b/index.htm
@@ -66,6 +66,7 @@
             </div>
         </div>
     </section>
+    <br>
 
     <!--BARS-->    
 
@@ -104,11 +105,45 @@
             <div class="box tall col-6"></div>
         </div>
     </section>
+    <br>
 
     <!--OFFSET-->
 
     <section class="content">
-
+        <h1>Offset</h1>
+        <div class="container">
+            <div class="box tall col-1 offset-11"></div>
+        </div>
+        <div class="container">
+            <div class="box tall col-2 offset-10"></div>
+        </div>
+        <div class="container">
+            <div class="box tall col-3 offset-9"></div>
+        </div>
+        <div class="container">
+            <div class="box tall col-4 offset-8"></div>
+        </div>
+        <div class="container">
+            <div class="box tall col-5 offset-7"></div>
+        </div>
+        <div class="container">
+            <div class="box tall col-6 offset-6"></div>
+        </div>
+        <div class="container">
+            <div class="box tall col-7 offset-5"></div>
+        </div>
+        <div class="container">
+            <div class="box tall col-8 offset-4"></div>
+        </div>
+        <div class="container">
+            <div class="box tall col-9 offset-3"></div>
+        </div>
+        <div class="container">
+            <div class="box tall col-10 offset-2"></div>
+        </div>
+        <div class="container">
+            <div class="box tall col-11 offset-1"></div>
+        </div>
     </section>
 </body>
 </html>
