--- a/css/bonus/index.html
+++ b/css/bonus/index.html
@@ -11,159 +11,230 @@
     <section class="content">
 
         <div class="container">
-            <div class="box blk col-4 offset-11"></div>
+            <div class="box blk col-12 offset-11"></div>
         </div>
 
         <div class="container">
-            <div class="box blk col-4 offset-11"></div>
+            <div class="box blk col-12 offset-11"></div>
+        </div>
+
+       
+
+        <div class="container">
+            <div class="box blk col-2 offset-10"></div>
+            <div class="box blk col-11 offset-1"></div>
         </div>
 
         <div class="container">
-            <div class="box blk col-6 offset-10"></div>
+            <div class="box blk col-2 offset-10"></div>
+            <div class="box blk col-11 offset-1"></div>
         </div>
 
         <div class="container">
-            <div class="box blk col-1 offset-10"></div>
-            <div class="box blk col-4 offset-1"></div>
+            <div class="box blk col-14 offset-10"></div>
         </div>
 
         <div class="container">
-            <div class="box blk col-1 offset-10"></div>
-            <div class="box blk col-4 offset-1"></div>
+            <div class="box blk col-14 offset-10"></div>
         </div>
 
         <div class="container">
-            <div class="box blk col-6 offset-10"></div>
+            <div class="box blk col-14 offset-10"></div>
         </div>
 
         <div class="container">
-            <div class="box blk col-6 offset-10"></div>
+            <div class="box blk col-14 offset-10"></div>
         </div>
 
         <div class="container">
-            <div class="box blk col-6 offset-10"></div>
+            <div class="box blk col-14 offset-10"></div>
         </div>
 
         <div class="container">
-            <div class="box blk col-6 offset-10"></div>
+            <div class="box blk col-14 offset-10"></div>
         </div>
 
         <div class="container">
-            <div class="box blk col-6 offset-10"></div>
+            <div class="box blk col-14 offset-10"></div>
         </div>
 
         <div class="container">
-            <div class="box blk col-6 offset-10"></div>
+            <div class="box blk col-14 offset-10"></div>
         </div>
 
         <div class="container">
-            <div class="box blk col-6 offset-10"></div>
+            <div class="box blk col-8 offset-10"></div>
         </div>
 
         <div class="container">
-            <div class="box blk col-6 offset-10"></div>
+            <div class="box blk col-8 offset-10"></div>
         </div>
 
         <div class="container">
-            <div class="box blk col-3 offset-10"></div>
-        </div>
-
-        <div class="container">
-            <div class="box blk col-3 offset-10"></div>
-        </div>
-
-        <div class="container">
-            <div class="box blk col-3 offset-10"></div>
-        </div>
-
-        <div class="container">
-            <div class="box blk col-1 offset-1"></div>
-            <div class="box blk col-6 offset-7"></div>
+            <div class="box blk col-8 offset-10"></div>
         </div>
 
         <div class="container">
             <div class="box blk col-1 offset-1"></div>
-            <div class="box blk col-6 offset-7"></div>
+            <div class="box blk col-12 offset-7"></div>
         </div>
 
         <div class="container">
             <div class="box blk col-1 offset-1"></div>
-            <div class="box blk col-4 offset-6"></div>
+            <div class="box blk col-12 offset-7"></div>
         </div>
 
         <div class="container">
             <div class="box blk col-1 offset-1"></div>
-            <div class="box blk col-4 offset-6"></div>
+            <div class="box blk col-9 offset-6"></div>
+        </div>
+
+        <div class="container">
+            <div class="box blk col-1 offset-1"></div>
+            <div class="box blk col-9 offset-6"></div>
         </div>
 
         <div class="container">
             <div class="box blk col-2 offset-1"></div>
-            <div class="box blk col-5 offset-4"></div>
+            <div class="box blk col-10 offset-4"></div>
         </div>
 
         <div class="container">
             <div class="box blk col-2 offset-1"></div>
-            <div class="box blk col-5 offset-4"></div>
+            <div class="box blk col-10 offset-4"></div>
         </div>
 
         <div class="container">
             <div class="box blk col-3 offset-1"></div>
-            <div class="box blk col-8 offset-2"></div>
+            <div class="box blk col-13 offset-2"></div>
         </div>
 
         <div class="container">
             <div class="box blk col-3 offset-1"></div>
-            <div class="box blk col-8 offset-2"></div>
+            <div class="box blk col-13 offset-2"></div>
+            <div class="box blk col-2 offset-15"></div>
         </div>
 
         <div class="container">
-            <div class="box blk col-10 offset-1"></div>
-            <div class="box blk col-1 offset-2"></div>
+            <div class="box blk col-16 offset-1"></div>
+            <div class="box blk col-1 offset-1"></div>
+            <div class="box blk col-2 offset-15"></div>
         </div>
 
         <div class="container">
-            <div class="box blk col-10 offset-1"></div>
-            <div class="box blk col-1 offset-2"></div>
+            <div class="box blk col-16 offset-1"></div>
+            <div class="box blk col-1 offset-1"></div>
+            <div class="box blk col-2 offset-15"></div>
         </div>
 
         <div class="container">
-            <div class="box blk col-10 offset-1"></div>
+            <div class="box blk col-16 offset-1"></div>
+            <div class="box blk col-2 offset-17"></div>
         </div>
 
         <div class="container">
-            <div class="box blk col-10 offset-1"></div>
+            <div class="box blk col-16 offset-1"></div>
+            <div class="box blk col-2 offset-17"></div>
         </div>
 
         <div class="container">
-            <div class="box blk col-10 offset-1"></div>
+            <div class="box blk col-16 offset-1"></div>
+            <div class="box blk col-2 offset-14"></div>
+            <div class="box blk col-2 offset-1"></div>
         </div>
 
         <div class="container">
-            <div class="box blk col-10 offset-1"></div>
+            <div class="box blk col-16 offset-1"></div>
+            <div class="box blk col-2 offset-14"></div>
+            <div class="box blk col-2 offset-1"></div>
+            <div class="box blk col-2 offset-1"></div>
         </div>
 
         <div class="container">
-            <div class="box blk col-9 offset-2"></div>
+            <div class="box blk col-14 offset-2"></div>
+            <div class="box blk col-2 offset-15"></div>
+            <div class="box blk col-2 offset-1"></div>
+            <div class="box blk col-2 offset-1"></div>
         </div>
 
         <div class="container">
-            <div class="box blk col-9 offset-2"></div>
+            <div class="box blk col-14 offset-2"></div>
+            <div class="box blk col-2 offset-15"></div>
+            <div class="box blk col-2 offset-1"></div>
+            <div class="box blk col-2 offset-1"></div>
         </div>
 
         <div class="container">
-            <div class="box blk col-8 offset-2"></div>
+            <div class="box blk col-12 offset-3"></div>
+            <div class="box blk col-2 offset-16"></div>
+            <div class="box blk col-2 offset-1"></div>
+            <div class="box blk col-2 offset-1"></div>
         </div>
 
         <div class="container">
-            <div class="box blk col-8 offset-2"></div>
+            <div class="box blk col-12 offset-3"></div>
+            <div class="box blk col-4 offset-17"></div>
+            <div class="box blk col-2 offset-1"></div>
         </div>
 
         <div class="container">
-            <div class="box blk col-6 offset-3"></div>
+            <div class="box blk col-10 offset-4"></div>
+            <div class="box blk col-4 offset-18"></div>
+            <div class="box blk col-2 offset-1"></div>
         </div>
 
         <div class="container">
-            <div class="box blk col-6 offset-3"></div>
+            <div class="box blk col-10 offset-4"></div>
+            <div class="box blk col-4 offset-20"></div>
+        </div>
+
+        <div class="container">
+            <div class="box blk col-4 offset-5"></div>
+            <div class="box blk col-3 offset-2"></div>
+            <div class="box blk col-4 offset-20"></div>
+        </div>
+
+        <div class="container">
+            <div class="box blk col-4 offset-5"></div>
+            <div class="box blk col-3 offset-2"></div>
+            <div class="box blk col-2 offset-20"></div>
+        </div>
+
+        <div class="container">
+            <div class="box blk col-3 offset-5"></div>
+            <div class="box blk col-2 offset-4"></div>
+            <div class="box blk col-2 offset-20"></div>
+        </div>
+
+        <div class="container">
+            <div class="box blk col-40"></div>
+        </div>
+
+        <div class="container">
+            <div class="box blk col-2 offset-5"></div>
+            <div class="box blk col-2 offset-5"></div>
+            <div class="box blk col-2 offset-20"></div>
+        </div>
+
+        <div class="container">
+            <div class="box blk col-2 offset-5"></div>
+            <div class="box blk col-2 offset-5"></div>
+            <div class="box blk col-2 offset-20"></div>
+        </div>
+
+        <div class="container">
+            <div class="box blk col-3 offset-5"></div>
+            <div class="box blk col-1 offset-2" ></div>
+            <div class="box blk col-3 offset-1"></div>
+            <div class="box blk col-2 offset-19"></div>
+        </div>
+
+        <div class="container">
+            <div class="box blk col-1 offset-1"></div>
+            <div class="box blk col-3 offset-3"></div>
+            <div class="box blk col-3 offset-4"></div>
+            <div class="box blk col-1 offset-10"></div>
+            <div class="box blk col-2 offset-8"></div>
         </div>
     </section>
 </body>
